Add list vm object query params
